# rust-wasm-game

./: Cargo.toml  package-lock.json  package.json  rust-toolchain.toml  webpack.config.js
.github/workflows/: build.yml
src/: browser.rs  engine.rs  game.rs  lib.rs  segment.rs  sound.rs
src/game/: test_browser.rs
static/: index.html  style.css
